# vibe-pipe

./: .coverage  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS.md.bak  CORE_ABSTRACTION_CONTRACT.md  LICENSE  LOOM_CHANGELOG.md  LOOM_CHANGELOG.md.bak  LOOM_PROJECT.md  LOOM_ROADMAP.md  LOOM_ROADMAP.md.bak  LOOM_ROADMAP.md.bak2  README.md  ROADMAP.md  TICKETS.md  WEB_IMPLEMENTATION.md  docker-compose.test.yml  pyproject.toml
.claude.bak/agents/: murmur-manager.md
.claude/agents/: team-integrator.md  team-investigator.md  team-manager.md  team-merge.md  team-worker.md
.claude/skills/author-agents-md-uv-python/: SKILL.md
.claude/skills/compound-apply-spec/: SKILL.md
.claude/skills/compound-autolearn-compoundspec/: SKILL.md
.claude/skills/compound-workflows/: SKILL.md
.claude/skills/data-cleaning-implementation/: SKILL.md
.claude/skills/drift-detection-implementation/: SKILL.md
.claude/skills/fastapi-web-framework/: SKILL.md
.github/workflows/: ci.yml  deploy-docs.yml
.memory/: comprehensive-ticket-breakdown.md  great-expectations-research.md  index.sqlite3  pandera-research.md  phase2-roadmap.md  prefect-research.md  vibepiper-current-state-analysis.md
.memos/: airflow-research.md  dagster-research.md  dbt-research.md  meta.json
.opencode.bak/agents/: murmur-investigator.md  murmur-worker.md
.opencode/agents/: murmur-manager.md  murmur-merge.md  review-docs.md  review-quality.md  review-security.md  team-integrator.md  team-investigator.md  team-manager.md  team-merge.md  team-worker.md
.opencode/commands/: workflows:compound.md  workflows:plan.md  workflows:review.md  workflows:work.md
.opencode/compound/: state.json
.opencode/memory/: INSTINCTS.md  instincts.json  observations.jsonl
.opencode/plugins/: compound_engineering.ts
.state/: diamond.json  test_graph.json
.tickets/: config.yaml  vp-02cc.md  vp-0429.md  vp-045b.md  vp-0862.md  vp-09e9.md  vp-0b65.md  vp-100.md  vp-101.md  vp-102.md  vp-103.md  vp-104.md  vp-105.md  vp-106.md  vp-141f.md  vp-18d6.md  vp-19e7.md  vp-1aa6.md  vp-211d.md  vp-2386.md  vp-2541.md  vp-25c9.md  vp-2830.md  vp-2ceb.md  vp-2e59.md  vp-306d.md  vp-3096.md  vp-331b.md  vp-3499.md  vp-36be.md  vp-42ae.md  vp-48c5.md  vp-5299.md  vp-530e.md  vp-538e.md  vp-5406.md  vp-5902.md  vp-60bc.md  vp-6365.md  vp-66b4.md  (+47 more)
docs/: anomaly_detection.md  before_after_comparison.md  config.md  config_driven_pipelines.md  dashboard.md  database_connectors.md  declarative_schema_design.md  external_quality_integration.md  investigation_missing_abstractions.md  quality-scoring.md  scheduling.md  sql_assets.md  testing_patterns.md  transformations.md  type_system.md  validation_history.md
docs/source/: conf.py  contributing.rst  development.rst  getting_started.rst  index.rst
docs/source/api/: core.rst  (+1 more)
examples/: drift_detection_example.py  transformation_example.py  vibepiper.example.toml  vibepiper.minimal.toml
examples/api_ingestion/: README.md  __init__.py  pipeline.py  pipeline_v2.py  schemas.py  vibepiper.toml
examples/etl_pipeline/: .gitignore  README.md  docker-compose.yml  pipeline.py  schemas.py  vibepiper.toml
examples/pipelines/: demo_pipeline.toml  demo_pipeline.yaml
examples/sample_pipeline/: __init__.py  generate_docs.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
scripts/: run_integration_tests.sh  run_server.py
src/vibe_piper/: __init__.py  asset_factory.py  benchmarks.py  caching.py  core.py  decorators.py  error_handling.py  execution.py  expectations.py  lazy.py  operators.py  orchestration.py  pipeline.py  quality.py  query_hints.py  schema_definitions.py  schema_evolution.py  sql_assets.py  types.py
src/vibe_piper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conftest.py  test_advanced_retry.py  test_asset_creation_parity.py  test_basic.py  test_cleaning.py  test_decorators.py  test_dependency_inference.py  test_error_handling.py  test_execution.py  test_expectations.py  test_io_manager_registry.py  test_io_managers.py  test_lineage.py  test_materialization.py  test_materialization_integration.py  test_operators.py  test_orchestration.py  test_pipeline.py  test_protocols.py  test_quality.py  test_schema_definitions.py  test_schema_evolution.py  test_sql_assets.py  test_testing_infrastructure.py  test_transformations.py  test_types.py  test_upstream_data.py
tests/cli/: __init__.py  test_asset_commands.py  test_pipeline_operations.py  test_pipeline_status.py
tests/config/: __init__.py  test_loader.py  test_multi_format.py  test_overrides.py  test_schema.py  test_secrets.py  test_validation.py
tests/connectors/: __init__.py  test_base.py  test_csv.py  test_excel.py  test_json.py  test_mysql_integration.py  test_parquet.py  test_postgres_integration.py  test_utils.py
tests/dashboard/: conftest.py  test_dashboard.py
tests/docs/: __init__.py  test_catalog_generator.py  test_cli.py  test_lineage_visualizer.py  test_schema_generator.py  test_site_generator.py
tests/external_quality/: __init__.py  test_external_quality.py
tests/fixtures/: fake_data.py  sample.csv  sample.json  sample.parquet
tests/helpers/: __init__.py  assertions.py  comparators.py  factories.py
tests/integration/: __init__.py  conftest.py  test_auth.py  test_graphql_client.py  test_pagination.py  test_rest_client.py  test_validation.py  test_webhook.py
tests/monitoring/: test_errors.py  test_health.py  test_logging.py  test_metrics.py  test_profiling.py
tests/pipeline_config/: __init__.py  test_generator.py  test_parser.py
tests/scheduling/: test_backfill.py  test_persistence.py  test_scheduler.py  test_schedules.py
tests/sinks/: __init__.py  test_ddl_generator.py
tests/sources/: __init__.py  test_api_source.py  test_database_source.py  test_file_source.py
tests/transformations/: __init__.py  test_pipeline.py  test_transforms.py  test_validators.py
tests/validation/: __init__.py  test_anomaly_detection.py  test_checks.py  test_decorators.py  test_drift_detection.py  test_history.py  test_quality_scoring.py  test_suite.py
(+197 files in other folders)
