[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-piper"
version = "0.1.0"
description = "Declarative data pipeline, integration, quality, transformation, and activation library"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Vibe Piper Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "python-snappy>=0.7.3",
    "typer>=0.12.0",
    "rich>=13.7.0",
]

[project.scripts]
vibepiper = "vibe_piper.cli.main:cli"

[project.optional-dependencies]
files = [
    "pandas>=2.0.0",
    "pyarrow>=12.0.0",
    "openpyxl>=3.0.0",
    "python-snappy>=0.6.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.0",
    "ruff>=0.5.0",
    "vibe-piper[files]",
]
all = [
    "vibe-piper[files,dev,postgres,mysql,snowflake,bigquery]",
]
postgres = [
    "psycopg2-binary>=2.9.0",
]
mysql = [
    "mysql-connector-python>=8.0.0",
]
snowflake = [
    "snowflake-connector-python>=3.0.0",
]
bigquery = [
    "google-cloud-bigquery>=3.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
strict_equality = true
pretty = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
exclude = [
    "examples/",
]

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
check_untyped_defs = false

[[tool.mypy.overrides]]
module = "examples.*"
strict = false
check_untyped_defs = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = ["UP040"]  # TypeAlias usage (keep for Python 3.9 compatibility)

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001"]
"src/vibe_piper/cli/**/*.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "integration: marks tests as integration tests (requires database)",
]

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
